修复编译错误：添加CoreGraphics框架

--- a/.github/workflows/build-dylib.yml
+++ b/.github/workflows/build-dylib.yml
@@ -29,7 +29,9 @@ jobs:
           -dynamiclib \
           -framework UIKit \
           -framework Foundation \
+          -framework CoreGraphics \
           -fobjc-arc \
+          -Wno-deprecated-declarations \
           -o MaroonedCheat.dylib \
           MaroonedCheat.m
         
