修复SDK下载链接

--- a/.github/workflows/build-autotranslate.yml
+++ b/.github/workflows/build-autotranslate.yml
@@ -22,8 +22,12 @@ jobs:
         
     - name: Download iOS SDK
       run: |
-        curl -LO https://github.com/theos/sdks/releases/download/master/iPhoneOS14.5.sdk.tar.xz
-        tar -xf iPhoneOS14.5.sdk.tar.xz -C $HOME/theos/sdks/
+        cd $HOME/theos/sdks
+        curl -LO https://github.com/theos/sdks/releases/latest/download/iPhoneOS16.5.sdk.tar.xz || \
+        curl -LO https://github.com/xybp888/iOS-SDKs/releases/download/iOS-SDKs/iPhoneOS14.5.sdk.tar.xz || \
+        curl -LO https://raw.githubusercontent.com/ArtSabintsev/Siri-Shortcut-Signing/main/iPhoneOS14.5.sdk.tar.xz
+        tar -xf *.tar.xz || true
+        ls -la
         
     - name: Build AutoTranslate Dylib
       run: |
