--- a/.github/workflows/build-autotranslate.yml
+++ b/.github/workflows/build-autotranslate.yml
@@ -23,11 +23,13 @@ jobs:
     - name: Download iOS SDK
       run: |
         cd $HOME/theos/sdks
-        curl -LO https://github.com/theos/sdks/releases/latest/download/iPhoneOS16.5.sdk.tar.xz || \
-        curl -LO https://github.com/xybp888/iOS-SDKs/releases/download/iOS-SDKs/iPhoneOS14.5.sdk.tar.xz || \
-        curl -LO https://raw.githubusercontent.com/ArtSabintsev/Siri-Shortcut-Signing/main/iPhoneOS14.5.sdk.tar.xz
-        tar -xf *.tar.xz || true
+        # 使用可靠的SDK源
+        curl -L -o sdk.tar.xz "https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/iPhoneOS14.4.sdk.tar.xz" || \
+        curl -L -o sdk.tar.xz "https://github.com/xybp888/iOS-SDKs/releases/download/iOS16.4/iPhoneOS16.4.sdk.tar.xz"
+        tar -xJf sdk.tar.xz || tar -xf sdk.tar.xz
         ls -la
+        # 重命名确保兼容
+        mv iPhoneOS*.sdk iPhoneOS14.5.sdk 2>/dev/null || true
         
     - name: Build AutoTranslate Dylib
       run: |
