--- a/.github/workflows/build-autotranslate.yml
+++ b/.github/workflows/build-autotranslate.yml
@@ -16,7 +16,7 @@ jobs:
       
     - name: Setup Theos
       run: |
-        brew install ldid xz
+        brew install ldid xz dpkg
         git clone --recursive https://github.com/theos/theos.git $HOME/theos
         echo "THEOS=$HOME/theos" >> $GITHUB_ENV
         
