修复编译错误 - 添加CoreGraphics框架

--- a/.github/workflows/build-tianxuan-dylib.yml
+++ b/.github/workflows/build-tianxuan-dylib.yml
@@ -29,6 +29,7 @@ jobs:
           -dynamiclib \
           -framework UIKit \
           -framework Foundation \
+          -framework CoreGraphics \
           -lsqlite3 \
           -fobjc-arc \
           -Wno-deprecated-declarations \
