--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
-# 排除大文件和二进制
-*.ipa
-*.dylib
-*.deb
+# 排除存档文件夹
+我独自生活存档文件/
+存档文件/
+*.sqlite
+*.sqlite-*
+*.plist
 
-# 排除无关文件
-抓包到的数据.html
-ASWJGAMEPLUS_analysis.md
+# 排除临时文件
+*.log
+*.tmp
+*.temp
+
+# 排除编译产物
+*.dylib
+*.o
+*.a
+
+# 排除系统文件
+.DS_Store
+Thumbs.db
