--- a/.github/workflows/build-woduzishenghua-dylib.yml
+++ b/.github/workflows/build-woduzishenghua-dylib.yml
@@ -31,6 +31,7 @@ jobs:
           -dynamiclib \
           -framework UIKit \
           -framework Foundation \
+          -framework CoreGraphics \
           -fobjc-arc \
           -o WoduziCheat.dylib \
           WoduziCheat.m
