--- a/.github/workflows/build-woduzishenghua-dylib.yml
+++ b/.github/workflows/build-woduzishenghua-dylib.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         xcode-version: latest-stable
     
-    - name: Build WoduziShenghua Dylib
+    - name: Build WoduziShenghua Dylib (Simple Version)
       run: |
         cd 我独自生活Dylib
         clang -arch arm64 \
@@ -33,16 +33,16 @@ jobs:
           -framework Foundation \
           -framework CoreGraphics \
           -fobjc-arc \
-          -o WoduziCheat.dylib \
-          WoduziCheat.m
+          -o WoduziCheat_Simple.dylib \
+          WoduziCheat_Simple.m
         
         # Verify the build
-        file WoduziCheat.dylib
-        ls -la WoduziCheat.dylib
+        file WoduziCheat_Simple.dylib
+        ls -la WoduziCheat_Simple.dylib
     
     - name: Upload Dylib
       uses: actions/upload-artifact@v4
       with:
-        name: WoduziShenghua-Dylib
-        path: 我独自生活Dylib/WoduziCheat.dylib
+        name: WoduziShenghua-Simple-Dylib
+        path: 我独自生活Dylib/WoduziCheat_Simple.dylib
         retention-days: 30
