🎯 新增实时Hook修改器 - 基于'必须保持开启状态'的发现
✨ 新功能:
- WoduziCheat_RealTime.m: 实时Hook版本修改器
- 精确匹配当前现金数值 2099999100
- 实时拦截所有数值读取方法
- 三指长按2秒打开控制面板
- 完整的日志系统和手势控制

🔧 技术改进:
- 基于别的作者'必须保持开启状态才有效'的发现
- 使用实时拦截而非存档修改方式
- Hook NSUserDefaults 和 NSNumber 的所有数值方法
- 动态替换数值，保持dylib加载状态即可生效

📱 用户体验:
- 启动提示和控制面板
- 实时开启/关闭Hook功能
- 查看拦截日志和状态
- 无需重启游戏，立即生效

🚀 自动编译:
- 更新GitHub Actions支持RealTime版本
- 自动生成两个版本的dylib文件
- 更新README文档说明

--- a/.github/workflows/build-woduzishenghua-dylib.yml
+++ b/.github/workflows/build-woduzishenghua-dylib.yml
@@ -40,9 +40,34 @@ jobs:
         file WoduziCheat_Simple.dylib
         ls -la WoduziCheat_Simple.dylib
     
+    - name: Build WoduziShenghua Dylib (RealTime Version)
+      run: |
+        cd 我独自生活Dylib
+        clang -arch arm64 \
+          -isysroot $(xcrun --sdk iphoneos --show-sdk-path) \
+          -miphoneos-version-min=14.0 \
+          -dynamiclib \
+          -framework UIKit \
+          -framework Foundation \
+          -framework CoreGraphics \
+          -fobjc-arc \
+          -o WoduziCheat_RealTime.dylib \
+          WoduziCheat_RealTime.m
+        
+        # Verify the build
+        file WoduziCheat_RealTime.dylib
+        ls -la WoduziCheat_RealTime.dylib
+    
     - name: Upload Dylib
       uses: actions/upload-artifact@v4
       with:
         name: WoduziShenghua-Simple-Dylib
         path: 我独自生活Dylib/WoduziCheat_Simple.dylib
+        retention-days: 30
+    
+    - name: Upload RealTime Dylib
+      uses: actions/upload-artifact@v4
+      with:
+        name: WoduziShenghua-RealTime-Dylib
+        path: 我独自生活Dylib/WoduziCheat_RealTime.dylib
         retention-days: 30
