--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -6,10 +6,10 @@
   
   "permissions": [
     "webRequest",
-    "webRequestBlocking",
     "storage",
     "tabs",
-    "scripting"
+    "scripting",
+    "activeTab"
   ],
   
   "host_permissions": [
