--- a/DragonCheatDylib/Makefile
+++ b/DragonCheatDylib/Makefile
@@ -8,5 +8,6 @@ TWEAK_NAME = DragonCheat
 DragonCheat_FILES = DragonCheat.m
 DragonCheat_CFLAGS = -fobjc-arc
 DragonCheat_FRAMEWORKS = UIKit Foundation
+DragonCheat_LDFLAGS = -lsqlite3
 
 include $(THEOS_MAKE_PATH)/tweak.mk
