修复 Makefile - 使用 LIBRARIES 而不是 LDFLAGS

--- a/DragonCheatDylib/Makefile
+++ b/DragonCheatDylib/Makefile
@@ -8,6 +8,6 @@ TWEAK_NAME = DragonCheat
 DragonCheat_FILES = DragonCheat.m
 DragonCheat_CFLAGS = -fobjc-arc
 DragonCheat_FRAMEWORKS = UIKit Foundation
-DragonCheat_LDFLAGS = -lsqlite3
+DragonCheat_LIBRARIES = sqlite3
 
 include $(THEOS_MAKE_PATH)/tweak.mk
