添加工作流文件修改时的自动触发

--- a/.github/workflows/build-dragon-dylib.yml
+++ b/.github/workflows/build-dragon-dylib.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'DragonCheatDylib/**'
+      - '.github/workflows/build-dragon-dylib.yml'
   workflow_dispatch:
 
 jobs:
