仅编译 arm64 以兼容 TrollFools/ldid 注入

--- a/DragonCheatDylib/Makefile
+++ b/DragonCheatDylib/Makefile
@@ -1,7 +1,6 @@
 TARGET := iphone:clang:latest:14.0
 INSTALL_TARGET_PROCESSES = 不服来通关
-THEOS_DEVICE_IP = 127.0.0.1
-THEOS_DEVICE_PORT = 2222
+ARCHS = arm64
 
 include $(THEOS)/makefiles/common.mk
 
